[AUD-15] Fix Explore Page section expand overlap on Safari (#144)

--- a/audius-client/packages/web/src/containers/explore-page/components/desktop/Section.module.css
+++ b/audius-client/packages/web/src/containers/explore-page/components/desktop/Section.module.css
@@ -19,7 +19,7 @@
 
 .subtitle {
   text-align: left;
-  color: var(--neutral);  
+  color: var(--neutral);
   font-size: var(--font-m);
   font-weight: var(--font-medium);
   letter-spacing: 0;
@@ -108,6 +108,7 @@
   margin: -16px -24px;
   padding: 16px;
   box-sizing: content-box;
+  transform: translate3d(0, 0, 0);
 }
 
 .expandable .children > * {
